# schema-shield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: new_schema.json  old_schema.json
src/schema_guard/: __init__.py  classify.py  cli.py  compare.py  normailze.py  report.py
src/schema_guard/core/: classify.py  normalize.py  report.py
src/schema_shield/: __init__.py  cli.py
src/schema_shield/adapters/: delta.py
src/schema_shield/core/: classify.py  compare.py  report.py
src/tests/: test_basic.py
tests/core/: test_basic.py
