[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-guard"
version = "1.0.0"
description = "Schema compatibility and transfer safety utility for data pipelines"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "chocka.dev" }
]
license = { text = "MIT" }
dependencies = ["click>=8.0", "rich>=13.0"]

[project.scripts]
schema-guard = "schema_guard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]