[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-shield"
version = "1.1.0"
description = "Schema compatibility and transfer safety utility for data pipelines"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "chocka.dev" }
]
license = { text = "MIT" }
dependencies = ["click>=8.0", "rich>=13.0"]

[project.optional-dependencies]
spark = ["pyspark>=3.3"]
databricks = ["databricks-sdk>=0.20", "pyspark>=3.3"]

[project.scripts]
schema-shield = "schema_shield.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]